# damp-permifrost-concatinator

./: .gitignore  Permifrost-concatinator.py  README.md  generated.yml  permifrost_requirements.txt  pyproject.toml  real_permisions.yml  requierements.txt
.github/workflows/: automated_tests.yaml
src/: Base_module.py  Databases.py  Databases_module.py  Module_description.py  Reader.py  Roles.py  Roles_module.py  Spec_generator.py  Spesification.py  Spesification_description.py  Users.py  Users_module.py  Warehouses.py  Warehouses_module.py  Writer_yaml_file.py  main.py  verification_module.py
src/permifrost_concatinator/: Base_module.py  Databases_module.py  Permission_state.py  Reader.py  Roles_module.py  Spec_generator.py  Spesification.py  loader_local_file.py  txt_generator.py
src/permifrost_concatinator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: conftest.py  test_ar_imputaiton.py  test_base_module.py  test_base_roles.py  test_databases.py  test_loader_local_files.py  test_module_description.py  test_permifrost_spec_generator.py  test_reader.py  test_sate.py  test_spassification_descripion.py  test_spec_generator.py  test_spesification.py  test_usecase_simple_generation.py  test_usecases.py  test_users.py  test_verification.py  test_warehouses.py  test_writer.py
tests/data/: dev_databases_and_roles.yml  permision_state.json  permissions_without_ar.yml  plan.txt  real_permisions.yml  team_b_permisions.yml  verified_permissions.yml
tests/data/base_premissions/: team_a_permisions.yml  team_b_permisions.yml
tests/data/errors/: permissions.txt
tests/data/permission_teams_without_ar/: team_a_permisions.yml  team_b_permisions.yml  team_c_permissions.yml  team_d_permisions.yml
tests/data/verification_error_premissions/: team_c_permissions.yml
