[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "permifrost-concatinator"
version = "0.0.1"
description = "Concatenates multiple Permifrost spec files into one"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "click",
    "yaml"
]

[project.scripts]
permifrost-concatinator = "main:main"
