[tool.poetry]
name = "Permifrost concatinator"
version = "1.0.0"
description = "Module to to take multiple Permifrost spec files and concatenate them into one"
authors = ["Simen Svenkerud <simen.svenkerud@storebrand.no>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9.6"
click = "^8.1.7"
pyyaml = "^6.0.1"
regex = "^2023.10.3"
dictdiffer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

[project.scripts]
permifrost-concatinator = "main:main"
