[tool.poetry]
name = "Permifrost concatinator"
version = "1.0.0"
description = "Module to to take multiple Permifrost spec files and concatenate them into one"
authors = ["Simen Svenkerud <simen.svenkerud@storebrand.no>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9.6"
click = "^8.1.7"
pyyaml = "^6.0.1"
regex = "^2023.10.3"
dictdiffer = "^0.9.0"
wheel = "^0.41.2"
setuptools = "^68.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project.scripts]
permifrost-concatinator = "main:main"

[project]
name = "permifrost-concatinator"
version = "0.0.1"
description = "Concatenates multiple Permifrost spec files into one"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "click",
    "pyyaml",
    "regex",
    "dictdiffer"
]